--- a/Home.html
+++ b/Home.html
@@ -1,9 +1,12 @@
 <html>
   <head>
       <title>Memikipl</title>
-      <h1>Memiki Pl</h1>
+      <h1>Memiki PL</h1>
   </head>
-
+  <boady>
+      <p>Witaj czieszymy się że cię tu widzi</p>
+  </boady>
+  
 
   
 </html>
