--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,12 @@
       <h1>Memiki PL</h1>
   </head>
   <boady>
-      <p>Witaj czieszymy się że cię tu widzi</p>
+    <p>Witaj czieszymy się że cię tu widzi</p>
+    <a href="https://whatsapp.com/channel/0029VbCC8n7CcW4tEF9xCk2E" target="_blank">
+  <button>Dołącz do kanału Whatsapp</button>
+    </a>
+    
+    
   </boady>
   
 
